
Version 7.0.17 - 2024-09-01
---------------------------
* Bug fixes (see mercurial logs for details)


Version 7.0.16 - 2024-08-01
---------------------------
* Bug fixes (see mercurial logs for details)


Version 7.0.15 - 2024-07-17
---------------------------
* Bug fixes (see mercurial logs for details)


Version 7.0.14 - 2024-07-01
---------------------------
* Bug fixes (see mercurial logs for details)


Version 7.0.13 - 2024-06-15
---------------------------
* Bug fixes (see mercurial logs for details)


Version 7.0.12 - 2024-06-02
---------------------------
* Bug fixes (see mercurial logs for details)


Version 7.0.11 - 2024-05-01
---------------------------
* Bug fixes (see mercurial logs for details)


Version 7.0.10 - 2024-04-17
---------------------------
* Bug fixes (see mercurial logs for details)
* Do not accept compressed content from unauthenticated request (#13142)

Version 7.0.9 - 2024-04-04
--------------------------
* Bug fixes (see mercurial logs for details)


Version 7.0.8 - 2024-03-03
--------------------------
* Bug fixes (see mercurial logs for details)


Version 7.0.7 - 2024-02-15
--------------------------
* Bug fixes (see mercurial logs for details)


Version 7.0.6 - 2024-02-03
--------------------------
* Bug fixes (see mercurial logs for details)


Version 7.0.5 - 2024-01-15
--------------------------
* Bug fixes (see mercurial logs for details)


Version 7.0.4 - 2024-01-01
--------------------------
* Bug fixes (see mercurial logs for details)


Version 7.0.3 - 2023-12-16
--------------------------
* Bug fixes (see mercurial logs for details)


Version 7.0.2 - 2023-12-01
--------------------------
* Bug fixes (see mercurial logs for details)


Version 7.0.1 - 2023-11-17
--------------------------
* Bug fixes (see mercurial logs for details)


Version 7.0.0 - 2023-10-30
--------------------------
* Bug fixes (see mercurial logs for details)
* Add pairwise_longest tools
* Add support for Python 3.12