@@ -1,3 +1,4 @@
+* Check read access of report records (#13505)
 
 Version 7.0.17 - 2024-09-01
 ---------------------------
